# stegtext-framework

./: .gitignore  LICENSE  README.md  default.json  pyproject.toml  requirements.txt
dataset/: douban_prompts.json  imdb_prompts.json
scripts/: hf_source_recipes.py  quickstart.py  test_matrix_encode_decode.py
src/stegtext/components/coding/: discop.py  imec.py  mec.py  random_sampler.py  range_ac.py
src/stegtext/components/disambiguation/: baseline.py  lookahead.py  mwis.py  none.py  syncpool.py
src/stegtext/components/sampling/: config.py  interfaces.py  reweight.py  samplers.py
src/stegtext/components/source/: __init__.py  base.py  hf.py  toy.py  vocab.py
src/stegtext/core/: __init__.py  contracts.py  data.py  engine.py  framing.py  grouping.py  hooks.py  metrics.py  payload.py  prob.py  rng.py
src/stegtext/integrations/: __init__.py  hf_recipes.py  toy.py
