
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stegtext"
version = "0.1.1"
description = "Zero-KL text steganography framework with pluggable sources, coders, and disambiguators."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.23", "torch>=1.12"]
